--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 terraform.*
-.terraform
+.terraform*
 packer-vsphere-iso-windows/win2019.base/variables.json
+packer-vsphere-iso-windows/win2016.base/variables.json
+variables*
+.terraform.tfstate.lock.info
