--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@ terraform.*
 .terraform*
 packer-vsphere-iso-windows/win2019.base/variables.json
 packer-vsphere-iso-windows/win2016.base/variables.json
-variables*
+variables.json
 .terraform.tfstate.lock.info
 # Cache objects
 packer_cache/
