--- a/packer-vsphere-iso-linux/Ubuntu-18.04/sample-preseed.cfg
+++ b/packer-vsphere-iso-linux/Ubuntu-18.04/sample-preseed.cfg
@@ -27,8 +27,8 @@ d-i partman/confirm_nooverwrite boolean true
 
 # Set root password
 d-i passwd/root-login boolean true
-d-i passwd/root-password password xxxx
-d-i passwd/root-password-again password xxxx
+d-i passwd/root-password password SecretPass
+d-i passwd/root-password-again password SecretPass
 
 # Package installations
 d-i pkgsel/include string open-vm-tools openssh-server net-tools perl vim
